[package]
name = "hooker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name         = "true_fan"
crate-type   = ["dylib"]

[dependencies]
libc = "0.2.155"
nix = { version = "0.29.0", features = ["fanotify"] }
redhook = "2.0.0"
